--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "pages":[
-    "pages/demo/demo",   
-    "pages/demo1/demo1", 
+    "pages/narrator/narrator",
+    "pages/preview/preview",
+    "pages/all/all",
+    "pages/detail/detail",
     "pages/index/index",
     "pages/logs/logs",
     "pages/mine/mine"
@@ -9,12 +11,12 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarTitleText": "绍兴古城讲解",
     "navigationBarTextStyle":"black"
   },
   "tabBar": {
     "list": [{
-      "pagePath": "pages/demo/demo",
+      "pagePath": "pages/all/all",
       "text": "主页",
       "iconPath": "image/index.png",
       "selectedIconPath": "image/_index.png"
