--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages":[
     "pages/all/all",
+    "pages/about/about",
     "pages/orders/orders",
     "pages/narrator/narrator",
     "pages/preview/preview",
