--- a/app.json
+++ b/app.json
@@ -1,12 +1,14 @@
 {
   "pages":[
     "pages/all/all",
+    "pages/map/map",
     "pages/about/about",
     "pages/orders/orders",
     "pages/narrator/narrator",
     "pages/preview/preview",
     "pages/detail/detail",
     "pages/detail_mrg/detail_mrg",
+    
     "pages/index/index"
   ],
   "permission": {
