--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
     "pages/goods_confirm_tickets/goods_confirm_tickets",
     "pages/goods_tickets_use/goods_tickets_use"
   ],
+  "requiredBackgroundModes": [
+    "audio"
+  ],
   "permission": {
     "scope.userLocation": {
       "desc": "你的位置信息将用于景区导航"
